gcc/testsuite/g++.dg/pph/d0unguarded.h
extern int x; // { dg-error "header lacks guard for PPH" }
